[gd_scene load_steps=4 format=3 uid="uid://cwjp861jsd6nr"]

[ext_resource type="SpriteFrames" uid="uid://cje1hgerr78g4" path="res://entities/skills/projectiles/spark/spark_frames.tres" id="1_0bybi"]
[ext_resource type="Script" path="res://entities/skills/projectiles/spark/spark_projectile.gd" id="1_l3g64"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 8.0

[node name="SparkProjectile" type="Area2D"]
collision_layer = 4
script = ExtResource("1_l3g64")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
scale = Vector2(0.1, 0.1)
sprite_frames = ExtResource("1_0bybi")
frame = 4
frame_progress = 0.582822

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
